<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="main_preferences" >

    <CheckBoxPreference
        android:key="musica"
        android:summary="@string/pref_music_summary"
        android:title="@string/pref_music_title" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/graficoTitle"
        android:entryValues="@array/graficoValue"
        android:key="grafico"
        android:summary="@string/pref_graficos_summary"
        android:title="@string/pref_graficos_title" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/controlTitle"
        android:entryValues="@array/controlValue"
        android:key="controles"
        android:summary="@string/pref_control_summary"
        android:title="@string/pref_control_title" />
<!--     <ListPreference -->
<!--         android:defaultValue="es" -->
<!--         android:entries="@array/languageTitle" -->
<!--         android:entryValues="@array/languageValues" -->
<!--         android:key="idiomas" -->
<!--         android:summary="@string/pref_idioma_summary" -->
<!--         android:title="@string/pref_idioma_title" /> -->

    <EditTextPreference
        android:defaultValue="2"
        android:key="fragmentos"
        android:summary="En cuantos trozos se divide un asteroide"
        android:title="Número de Fragmentos" />

</PreferenceScreen>